作業項目一覧表作成

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -75,6 +75,9 @@
                                 <li><a class="dropdown-item" href="{{ url_for('reports.order_details_list') }}">
                                     <i class="bi bi-list-ul me-2"></i>受注明細一覧
                                 </a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('reports.work_items_list') }}">
+                                    <i class="bi bi-list-check me-2"></i>作業項目一覧
+                                </a></li>
                                 <li><a class="dropdown-item" href="{{ url_for('reports.monthly_summary') }}">
                                     <i class="bi bi-calendar3 me-2"></i>受注月間表
                                 </a></li>
