月次サマリー機能の更新と作業内容一覧テンプレートの追加

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -72,6 +72,9 @@
                                 <li><a class="dropdown-item" href="{{ url_for('reports.list') }}">
                                     <i class="bi bi-file-text me-2"></i>報告書管理
                                 </a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('reports.work_contents_list') }}">
+                                    <i class="bi bi-list-check me-2"></i>作業内容一覧表
+                                </a></li>
                                 <li><a class="dropdown-item" href="{{ url_for('reports.order_details_list') }}">
                                     <i class="bi bi-list-ul me-2"></i>受注明細一覧
                                 </a></li>
